--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,44 @@
+body {
+    background-color: #ededed;
+    /*background-image: url('../images/fresh_snow.png');*/
+    /*background-repeat: repeat;*/
+}
+
+div.login-box {
+    text-align: center;
+    border-radius: 10px;
+    background-color: #f7f7f7;
+    height: 280px;
+    width: 400px;
+    padding: 40px;
+    margin: auto;
+    position: absolute;
+    top: 0; bottom: 0; right: 0; left: 0;
+}
+
+button#login {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 h1 {
     font-family: 'RalewayThin', Helvetica, sans-serif;
+}
+
+.container {
+    display: none;
+}
+
+.chosen-container {
+    margin-top: 5px;
+}
+
+div.photo {
+    width: 120px;
+    height: 120px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -moz-background-size: cover;
 }
