--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,18 @@ h1 {
 div.photo {
     width: 120px;
     height: 120px;
+    margin: 2px;
+    float: left;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     -moz-background-size: cover;
+}
+
+button#download {
+    display: none;
+}
+
+#blob {
+    display: none;
 }
