--- a/css/styles.css
+++ b/css/styles.css
@@ -26,10 +26,6 @@ h1 {
     font-family: 'RalewayThin', Helvetica, sans-serif;
 }
 
-.container {
-    display: none;
-}
-
 .chosen-container {
     margin-top: 5px;
 }
@@ -45,10 +41,6 @@ div.photo {
     -moz-background-size: cover;
 }
 
-button#download {
-    display: none;
-}
-
-#blob {
-    display: none;
+#progressbar {
+    width: 0%;
 }
